0.9.3 (2015-??-??)
==================

Bug Handling
------------


0.9.2 (2015-04-22)
==================

Bug Handling
------------

* Added bounds check for truncated inputs lines to StatsdInput.

* Fixed ElasticSearch recovery after full queue when `queue_full_action` is
  set to "drop" or "block".

* Fixed TcpOutput recovery after full queue when `queue_full_action` is set to
  "drop" or "block" (#1484).

* Fixed bug where LogstreamerInput wasn't honoring `oldest_duration` setting
  (#1437).

* ElasticSearch payload encoder will ensure there is a newline in the
  end of the payload in order for the bulk API to work correctly (#1457).

* Fix a gzipped file seeking in logstreamer may cause an OOM exception.

* Fixed config parsing typo bug in heka-logstreamer command (#1436).

* Always check for decoder existence when a decoder is specified for an input
  plugin (#1439).

* Check `IsStoppable()` on all input, filter, output plugins if they error at
  startup time, only shut down Heka if false.

* Fixed typo causing panic in AMQPInput when splitter returns an error
  (#1453).

* Handle chunked error responses in http_output.

* ElasticSearchOutput buffering now only retries messages when it's clear that
  the problem related to failed communication with the ElasticSearch server
  (#1401).

* Added handling of incomplete/trailing data for SplitBytes() method in
  SplitterRunner (#1455)

0.9.1 (2015-03-13)
==================

Features
--------

* Added configurable max_message_size to heka-cat.

* Added `count` setting to TokenSplitter to allow splitting on every Nth
  instance of the given delimiter.

* Added `deliver_incomplete_final` setting to SplitterRunner.

* Added `max_message_size` setting to UdpOutput.

Bug Handling
------------

* Fix the message matcher parser to clear the yySymType structure on each call
  (#1409).

* Protect read_message("raw") from reading an empty pack.MsgBytes (#1405).
