@@ -4,6 +4,7 @@
 Bug Handling
 ------------
 
+* Correctly honor "user-agent" heading config in HttpInput (#1520).
 
 0.9.2 (2015-04-22)
 ==================
